--- a/index.html
+++ b/index.html
@@ -1,254 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Focus Flow - Stunning Pomodoro Timer</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-</head>
-<body>
-    <!-- Animated Background -->
-    <div class="animated-bg">
-        <div class="floating-particles"></div>
-        <div class="gradient-orbs">
-            <div class="orb orb-1"></div>
-            <div class="orb orb-2"></div>
-            <div class="orb orb-3"></div>
-        </div>
-    </div>
-
-    <!-- Header -->
-    <header class="stunning-header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo-title">
-                    <div class="logo-icon">⏱️</div>
-                    <span>FOCUS FLOW</span>
-                </div>
-                <div class="header-controls">
-                    <button class="glass-btn" id="settingsBtn">
-                        <i class="fas fa-cog"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- Welcome Message (hidden by default) -->
-    <div id="welcomeMessage" class="container" style="display: none;">
-        <div class="glass-card welcome-card slide-up">
-            <div class="welcome-title">Welcome back! 🎉</div>
-            <p>Ready to continue your focus journey?</p>
-        </div>
-    </div>
-
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="container">
-            <!-- Timer Section -->
-            <section class="timer-section">
-                <div class="timer-container">
-                    <div class="timer-card-3d" id="timerCard">
-                        <div class="circular-progress">
-                            <svg class="progress-svg" viewBox="0 0 180 180">
-                                <circle 
-                                    cx="90" 
-                                    cy="90" 
-                                    r="85" 
-                                    fill="none" 
-                                    stroke="rgba(255,255,255,0.1)" 
-                                    stroke-width="10"
-                                ></circle>
-                                <circle 
-                                    cx="90" 
-                                    cy="90" 
-                                    r="85" 
-                                    fill="none" 
-                                    stroke="currentColor" 
-                                    stroke-width="10" 
-                                    stroke-linecap="round"
-                                    class="progress-circle"
-                                    id="progressCircle"
-                                ></circle>
-                            </svg>
-                            <div class="timer-center">
-                                <div class="timer-time" id="timerDisplay">25:00</div>
-                                <div class="timer-label">Ready to focus?</div>
-                            </div>
-                            <div class="timer-pulse"></div>
-                        </div>
-                        
-                        <div class="timer-controls">
-                            <button class="control-btn primary-btn" id="startBtn">
-                                <i class="fas fa-play play-icon"></i>
-                                Start Focus
-                            </button>
-                            <button class="control-btn secondary-btn hidden" id="pauseBtn">
-                                <i class="fas fa-pause pause-icon"></i>
-                                Pause
-                            </button>
-                            <button class="control-btn secondary-btn" id="resetBtn">
-                                <i class="fas fa-redo"></i>
-                                Reset
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Task Input -->
-            <section class="glass-card fade-in">
-                <h3 class="preset-title">What are you focusing on?</h3>
-                <div class="floating-label-input">
-                    <input 
-                        type="text" 
-                        id="taskInput" 
-                        class="stunning-input" 
-                        placeholder=" "
-                        maxlength="100"
-                    />
-                    <label class="floating-label">Enter your task or goal...</label>
-                </div>
-            </section>
-
-            <!-- Time Presets -->
-            <section class="glass-card">
-                <h3 class="preset-title">Choose Your Focus Duration</h3>
-                <div class="preset-buttons">
-                    <button class="preset-btn active" data-work="25" data-break="5">
-                        <div class="preset-name">Classic</div>
-                        <div class="preset-time">25 min / 5 min</div>
-                    </button>
-                    <button class="preset-btn" data-work="45" data-break="15">
-                        <div class="preset-name">Extended</div>
-                        <div class="preset-time">45 min / 15 min</div>
-                    </button>
-                    <button class="preset-btn" data-work="90" data-break="20">
-                        <div class="preset-name">Marathon</div>
-                        <div class="preset-time">90 min / 20 min</div>
-                    </button>
-                </div>
-
-                <!-- Custom Time Settings -->
-                <div style="margin-top: 2rem;">
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                        <div>
-                            <label for="workMinutes" style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Work Minutes</label>
-                            <input type="number" id="workMinutes" class="form-control" value="25" min="1" max="180">
-                        </div>
-                        <div>
-                            <label for="breakMinutes" style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Break Minutes</label>
-                            <input type="number" id="breakMinutes" class="form-control" value="5" min="1" max="60">
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Daily Stats -->
-            <section class="glass-card">
-                <div class="history-header">
-                    <h3 class="history-title">Today's Progress</h3>
-                    <div class="history-summary">
-                        <div class="summary-item">
-                            <div class="summary-value" id="todayFocusTime">0</div>
-                            <div class="summary-label">Minutes Focused</div>
-                        </div>
-                        <div class="summary-item">
-                            <div class="summary-value" id="todaySessionCount">0</div>
-                            <div class="summary-label">Sessions Completed</div>
-                        </div>
-                        <div class="summary-item">
-                            <div class="summary-value" id="currentStreak">0</div>
-                            <div class="summary-label">Day Streak</div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Motivational Quote -->
-            <section class="glass-card quote-card">
-                <div class="quote-icon">
-                    <i class="fas fa-quote-left"></i>
-                </div>
-                <div class="quote-text" id="motivationalQuote">"Focus is the gateway to excellence."</div>
-            </section>
-
-            <!-- Session History -->
-            <section class="glass-card">
-                <h3 class="history-title">Recent Sessions</h3>
-                <div id="sessionHistory">
-                    <div class="empty-history">
-                        <div class="empty-icon">🎯</div>
-                        <p>Complete your first session to see history here!</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Session Complete -->
-            <section class="glass-card bubble-card hidden" id="sessionComplete">
-                <div class="success-animation">
-                    <div class="success-icon">🎉</div>
-                    <div class="confetti"></div>
-                </div>
-                <h2>Session Complete!</h2>
-                <p>Great work! You've completed another focus session.</p>
-                <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 1.5rem;">
-                    <button class="bubble-btn" id="sendToBubbleBtn">
-                        <i class="fas fa-rocket"></i>
-                        Send to Task Manager
-                    </button>
-                    <button class="btn btn--secondary" id="startNewSessionBtn">
-                        <i class="fas fa-plus"></i>
-                        New Session
-                    </button>
-                </div>
-            </section>
-        </div>
-    </main>
-
-    <!-- Settings Modal -->
-    <div class="modal-overlay hidden" id="settingsModal">
-        <div class="glass-modal">
-            <div class="modal-header">
-                <h3>Settings</h3>
-                <button class="modal-close" id="closeSettings">×</button>
-            </div>
-            <div class="modal-body">
-                <div class="setting-group">
-                    <label class="setting-label">Focus Duration (minutes)</label>
-                    <div class="slider-container">
-                        <input type="range" class="stunning-slider" min="5" max="120" value="25" id="focusSlider">
-                        <span class="slider-value" id="focusValue">25</span>
-                    </div>
-                </div>
-                <div class="setting-group">
-                    <label class="setting-label">Break Duration (minutes)</label>
-                    <div class="slider-container">
-                        <input type="range" class="stunning-slider" min="1" max="30" value="5" id="breakSlider">
-                        <span class="slider-value" id="breakValue">5</span>
-                    </div>
-                </div>
-                <div class="setting-group">
-                    <label class="setting-label">
-                        <input type="checkbox" id="soundToggle" checked> 
-                        Play completion sound
-                    </label>
-                </div>
-                <div class="setting-group">
-                    <label class="setting-label">
-                        <input type="checkbox" id="notificationToggle" checked> 
-                        Show browser notifications
-                    </label>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="modal-btn secondary" id="resetSettings">Reset</button>
-                <button class="modal-btn primary" id="saveSettings">Save</button>
-            </div>
-        </div>
-    </div>
-
-    <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Enhanced Pomodoro Timer with Bubble.io Integration</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
