--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name="author" content="Khud Bakhtiyar Iqbal Sofi">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#6366f1" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Enhanced Pomodoro Timer with Bubble.io Integration</title>
+
+    <!-- Author information -->
+    <meta name="author" content="Khud Bakhtiyar Iqbal Sofi" />
+
+    <!-- SEO Meta -->
+    <title>Khud Bakhtiyar Iqbal Sofi | Enhanced Pomodoro Timer with Bubble.io</title>
+    <meta name="description" content="Official website of Khud Bakhtiyar Iqbal Sofi. Featuring an enhanced Pomodoro Timer integrated with Bubble.io and other innovative projects in web development and mechatronics." />
+
+    <!-- Schema.org Person Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Khud Bakhtiyar Iqbal Sofi",
+      "url": "https://task-51525.bubbleapps.io/version-test/?debug_mode=true",
+      "sameAs": [
+        "https://www.linkedin.com/in/khud-bakhtiyar-iqbal-sofi-70a2b6374",
+        "https://github.com/kbakhtiyaris"
+      ],
+      "jobTitle": "Mechatronics Engineering Student & Web Developer & Iot Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Işık University"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
